[package]
name = "api"
version = "0.1.0"
authors = ["Martin Ansong <martin.ansong@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
actix-web = "3.3.2"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
